SkyBackground: fix extra whitespace below the sky when gallery is open

--- a/assets/scripts/app/SkyBackground.scss
+++ b/assets/scripts/app/SkyBackground.scss
@@ -40,14 +40,14 @@
 
 .rear-clouds {
   height: 250px;
-  bottom: 200px;
+  bottom: 205px;
   background-image: url('../../../public/images/sky-rear.svg');
   background-size: 250px 250px;
 }
 
 .front-clouds {
   height: 280px;
-  bottom: 50px;
+  bottom: 55px;
   background-image: url('../../../public/images/sky-front.svg');
   background-size: 250px 280px;
 }
